fontawesome icon alignment fix

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -1,8 +1,8 @@
 :root, html, body {
   position: relative;
-  height: 100%;
   min-height: 100%;
   max-width: 100vw;
+  height: auto;
   text-rendering: optimizeSpeed;
 }
 
@@ -17,15 +17,18 @@
   width: auto;
   background-color: transparent;
   display: inherit;
-  cursor: pointer;
   white-space: nowrap;
   vertical-align: middle;
   border: 1pt solid transparent;
   padding: .4em .8em;
   border-radius: .15em;
   transition: color .1s linear, background-color .15s ease, border-color .15s ease, box-shadow .15s ease-in-out;
-  .svg-inline--fa { margin-top: -.35em; }
+  cursor: pointer;
   &:hover { @include shadow; }
+}
+
+button, p, i, a, h1, h2, h3, h4, h5, h6, b, sub, legend, sup {
+  > .svg-inline--fa { margin-top: -.3em; }
 }
 
 header {
